[package]
name = "ratio-emissions"
version = "0.1.0"
description = "RATIO token emissions program with off-chain signed claim tickets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ratio_emissions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"

